@@ -3605,8 +3605,8 @@ was not yet supported in pathsets. The regex, path rename, branch
 rename, and tag rename commands used Python-style rather than Go-style
 match references. Macro argument formals did not yet have a %
 prefix. The split command syntax was incompatibly different.  The
-"set" command didn't take a subcommand verb.  Theere was a "readlimit"
-campoaing what "swt readlimit" now does.
+"set" and "clear" commands didn't take a subcommand verb.  There was a
+"readlimit" command doing what "set readlimit" now does.
 
 In versions 4.30 and earlier, the read command had a --branchify
 option. This has been retired, you are now expected to do the
