@@ -8,6 +8,6 @@ hilda = Hilda J. Foonly <hilda@foonly.org> America/Los_Angeles
 + Hildegarde J. Foonly <hilda@not-foonly.org> America/New_York
 EOF
 changelogs
-clear interactive
+clear flag interactive
 write -
 
