@@ -19,6 +19,8 @@ Repository head::
      Handle "progress" directive in fast-import streams.
      Tested support for reading darcs repositories.
      When enabling logging flags, the "+" syntax is now optional.
+     "set" and "clear" are now "set flag" and "clear flag".
+     The "readlimit" command has been merged into "set readlimit".
 
 4.38: 2023-06-14::
      Experimental Perforce (p4) mirroring support in repotool.
